# Lie

./: .gitignore  Graph.hs  GraphTest.hs  HomSpace.hs  Lie.cabal  Octonion.hs  Ratio.hs  Root.hs  RootSystem.hs  RootSystemTest.hs  RootTest.hs  SemiSimple.hs  SemiSimpleTest.hs  SortedLists.hs  SortedListsTest.hs  Test.hs
